--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <div class="dtr">
           <p class="th">Art and NFT's action</p>
           <div class="alic">
-            <img class="ali" alt="left" src="/assests/left.png" />
-            <img class="ali" alt="right" src="/assests/right.png" />
+            <img class="ali" alt="left" src="./assests/left.png" />
+            <img class="ali" alt="right" src="./assests/right.png" />
           </div>
         </div>
         <div class="dic">
@@ -113,7 +113,7 @@
         <p class="rt1">1CEDOE</p>
         <div class="ihc">
           <p class="nft">NFT'S</p>
-          <img alt="image" class="ii" src="assests/monkey1.png" />
+          <img alt="image" class="ii" src="./assests/monkey1.png" />
         </div>
         <p class="rt2">24.97ETH</p>
       </div>
@@ -124,7 +124,7 @@
         <p>COMMUNITY</p>
       </div>
       <div class="ilc">
-        <img alt="image" class="dis" src="/assests/discord.png" />
+        <img alt="image" class="dis" src="./assests/discord.png" />
         <p style="font-weight: 500">Launch Discord</p>
       </div>
     </div>
@@ -143,13 +143,12 @@
       </div>
       <div class="gi1">
         <ul class="nav-list">
-          <li><img alt="image" class="lgi" src="/assests/fb.svg" /></li>
-          <li><img alt="image" class="lgi" src="/assests/insta.svg" /></li>
-          <li><img alt="image" class="lgi" src="/assests/twi.svg" /></li>
-          <li><img alt="image" class="lgi" src="/assests/wa.svg" /></li>
+          <li><img alt="image" class="lgi" src="./assests/fb.svg" /></li>
+          <li><img alt="image" class="lgi" src="./assests/insta.svg" /></li>
+          <li><img alt="image" class="lgi" src="./assests/twi.svg" /></li>
+          <li><img alt="image" class="lgi" src="./assests/wa.svg" /></li>
         </ul>
       </div>
     </footer>
-    <script src="./script.js"></script>
   </body>
 </html>
