--- a/index.html
+++ b/index.html
@@ -78,23 +78,62 @@
         <div class="dtr">
           <p class="th">Art and NFT's action</p>
           <div class="alic">
-            <img class="ali" alt="left" src="./assests/left.png" />
-            <img class="ali" alt="right" src="./assests/right.png" />
+            <img id="btl" class="ali" alt="left" src="./assests/left.png" />
+            <img id="btr" class="ali" alt="right" src="./assests/right.png" />
           </div>
         </div>
+        <div>
+          <img class="daal" src="./assests/daal.png" />
+        </div>
         <div class="dic">
-          <img alt="image" class="dia" src="./assests/monkey2.png" />
-          <img alt="image" class="dia1" src="./assests/monkey3.png" />
-          <img alt="image" class="dia" src="./assests/monkey4.png" />
-          <img alt="image" class="dia1" src="./assests/monkey1.png" />
-          <img alt="image" class="dia" src="./assests/monkey2.png" />
-          <img alt="image" class="dia1" src="./assests/monkey3.png" />
-          <img alt="image" class="dia" src="./assests/monkey4.png" />
-          <img alt="image" class="dia1" src="./assests/monkey1.png" />
-          <img alt="image" class="dia" src="./assests/monkey2.png" />
-          <img alt="image" class="dia1" src="./assests/monkey3.png" />
-          <img alt="image" class="dia" src="./assests/monkey4.png" />
-          <img alt="image" class="dia1" src="./assests/monkey1.png" />
+          <div class="mt">
+            <div class="jam"></div>
+            <img alt="image" class="dia" src="./assests/monkey2.png" />
+          </div>
+          <div class="mt">
+            <div class="jam1"></div>
+            <img alt="image" class="dia" src="./assests/monkey3.png" />
+          </div>
+          <div class="mt">
+            <div class="jam"></div>
+            <img alt="image" class="dia" src="./assests/monkey4.png" />
+          </div>
+          <div class="mt">
+            <div class="jam1"></div>
+            <img alt="image" class="dia" src="./assests/monkey1.png" />
+          </div>
+          <div class="mt">
+            <div class="jam"></div>
+            <img alt="image" class="dia" src="./assests/monkey2.png" />
+          </div>
+          <div class="mt">
+            <div class="jam1"></div>
+            <img alt="image" class="dia" src="./assests/monkey3.png" />
+          </div>
+          <div class="mt">
+            <div class="jam"></div>
+            <img alt="image" class="dia" src="./assests/monkey4.png" />
+          </div>
+          <div class="mt">
+            <div class="jam1"></div>
+            <img alt="image" class="dia" src="./assests/monkey1.png" />
+          </div>
+          <div class="mt">
+            <div class="jam"></div>
+            <img alt="image" class="dia" src="./assests/monkey2.png" />
+          </div>
+          <div class="mt">
+            <div class="jam1"></div>
+            <img alt="image" class="dia" src="./assests/monkey3.png" />
+          </div>
+          <div class="mt">
+            <div class="jam"></div>
+            <img alt="image" class="dia" src="./assests/monkey4.png" />
+          </div>
+          <div class="mt">
+            <div class="jam1"></div>
+            <img alt="image" class="dia" src="./assests/monkey1.png" />
+          </div>
         </div>
       </div>
       <div class="ccc">
@@ -149,6 +188,7 @@
           <li><img alt="image" class="lgi" src="./assests/wa.svg" /></li>
         </ul>
       </div>
+      <script src="./script.js"></script>
     </footer>
   </body>
 </html>
